--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "core-js": "2.5.1",
     "cpy": "5.1.0",
     "cpy-cli": "1.0.1",
-    "cucumber": "^3.1.0",
+    "cucumber": "3.1.0",
     "gh-pages": "1.0.0",
     "gitignore-to-glob": "0.3.0",
     "google-code-prettify": "1.0.5",
@@ -123,8 +123,8 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "1.0.2",
+    "karma-jasmine-html-reporter": "0.2.2",
     "karma-remap-istanbul": "0.6.0",
     "karma-sauce-launcher": "1.2.0",
     "lite-server": "2.3.0",
@@ -136,13 +136,13 @@
     "npm-run-all": "4.1.1",
     "prettier": "1.7.3",
     "protractor": "5.1.2",
-    "protractor-cucumber-framework": "^4.1.1",
+    "protractor-cucumber-framework": "4.1.1",
     "reflect-metadata": "0.1.10",
     "require-dir": "0.3.2",
     "rxjs": "5.4.3",
     "ts-helpers": "^1.1.1",
     "ts-loader": "3.0.5",
-    "ts-node": "^3.3.0",
+    "ts-node": "3.3.0",
     "tslint": "5.7.0",
     "tslint-config-valorsoft": "2.1.1",
     "typedoc": "0.8.0",
@@ -150,6 +150,6 @@
     "wallaby-webpack": "0.0.39",
     "webdriver-manager": "12.0.6",
     "webpack-bundle-analyzer": "2.9.0",
-    "zone.js": "0.8.17"
+    "zone.js": "0.8.18"
   }
 }
